--- a/28/daruma.html
+++ b/28/daruma.html
@@ -29,8 +29,8 @@
                 <h2>だるまいずごっとのタイプの女性</h2>
                 <img src="image/enako.jpg" alt="だるまタイプの画像">
             </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/GX_M2-ljseI?si=aKIZrG44dENguA9z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="moviedaruma">
+                <iframe width="850" height="506" src="https://www.youtube.com/embed/GX_M2-ljseI?si=aKIZrG44dENguA9z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
     </body>
 </html>
