--- a/28/home.html
+++ b/28/home.html
@@ -14,7 +14,7 @@
                 <li><a href="movie.html">好きなホラー映画</a></li>
                 <li><a href="anime.html">好きなアニメ</a></li>
                 <li><a href="daruma.html">好きなストリーマー</a></li>
-                <li><a href="girl.html">彼女</a></li>
+               <li><a href="trip.html">行きたい場所</a></li>
             </ul>
         </nav>
         <img src="image/nekoo.jpg" alt="ねこ" class="catright">
