--- a/28/daruma.html
+++ b/28/daruma.html
@@ -14,7 +14,7 @@
                     <li><a href="movie.html">好きなホラー映画</a></li>
                     <li><a href="anime.html">好きなアニメ</a></li>
                     <li><a href="daruma.html">好きなストリーマー</a></li>
-                    <li><a href="girl.html">彼女</a></li>
+                    <li><a href="trip.html">行きたい場所</a></li>
                 </ul>
         </nav>
         <img src="image/daru.jpg" alt="だるま" class="DARUMA">
@@ -29,8 +29,6 @@
                 <h2>だるまいずごっとのタイプの女性</h2>
                 <img src="image/enako.jpg" alt="だるまタイプの画像">
             </div>
-            <div class="moviedaruma">
                 <iframe width="850" height="506" src="https://www.youtube.com/embed/GX_M2-ljseI?si=aKIZrG44dENguA9z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
     </body>
 </html>
