--- a/28/anime.html
+++ b/28/anime.html
@@ -6,8 +6,8 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <nav>
+    <body id="animeba">
+        <nav id="animenav">
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="from.html">出身地</a></li>
