--- a/28/from.html
+++ b/28/from.html
@@ -6,8 +6,8 @@
         <title>出身地</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <nav>
+    <body id="fromba">
+        <nav id="fromnav">
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="from.html">出身地</a></li>
