--- a/28/movie.html
+++ b/28/movie.html
@@ -6,8 +6,8 @@
         <title>映画</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <nav>
+    <body id="horror">
+        <nav id="horrornav">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="from.html">出身地</a></li>
@@ -17,13 +17,10 @@
                 <li><a href="trip.html">行きたい場所</a></li>
             </ul>
         </nav>
-        <img src="image/movie.png" alt="映画" class="movie1">
+        
         <div class="letter2">
             <h1>好きなホラー映画</h1>
-            <h3>『死霊館』『アナベル』という映画は実在の心霊研究家ウォーレン夫妻の体験をもとにしたホラー作品で、実話ベースの緊張感とリアルな恐怖演出が魅力です。幽霊や悪魔との対峙、家族愛や信仰の力を描いたドラマ性もあり、単なる恐怖だけでなく感情に訴える深みがあります。</h3>
-            <div class="warning">
-                <h2>注意</h2>
-                <p>作品によって怖さが異なりますがかなり怖いです。</p>
+            <p>『アナベル』という映画は実在の心霊研究家ウォーレン<br>夫妻の体験をもとにしたホラー作品で、実話ベースの<br>緊張感とリアルな恐怖演出が魅力です。</p>
             </div>
         </div>
     </body>
