--- a/28/home.html
+++ b/28/home.html
@@ -23,7 +23,7 @@
             <h1>はじめまして</h1>
             <h2>氏名：古賀俊二</h2>
             <h3>プロフィール</h3>
-            <p>当サイトにアクセスありがとうございます。自己紹介サイトです。</p>
+            <p>自己紹介サイトです。</p>
         </div>
         <img src="image/neko3.jpg" alt="猫" id="catbir">
     <footer>2501406 古賀俊二</footer>    
